# olive

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  README.md  pitch.html  pyproject.toml  quickstart.bat  quickstart.sh
.claude/agents/: architect.md  builder.md  qa.md  red-team.md  security-reviewer.md
.github/workflows/: ci.yml
demo/: live_demo.py  records_server.py  run_demo.py  tools_server.py
demo/mock_files/: external_brief.txt  safe_document.txt
docs/: ARCHITECTURE.md  DEMO_RUNBOOK.md  EVALS.md  M12-implementation-spec.md  PROJECT_OVERVIEW.html  ROADMAP.md  THREAT_MODEL.md  UNIC_BRIEFING.html  VISION.md  quickstart.md
docs/decisions/: ADR-0001-mcp-native.md  ADR-0002-python.md  ADR-0003-business-posture-deferred.md  ADR-0004-sqlite-event-store.md  ADR-0005-llm-advisory-only.md  ADR-0006-session-state-circuit-breaker.md  ADR-0007-agent-identity-enforcement.md  ADR-0008-multi-upstream.md  ADR-0009-rug-pull-baselines.md  ADR-0010-contextual-authorization.md  ADR-0011-measured-detection-baseline-gate.md  ADR-0012-intelligence-sentinels.md  ADR-0013-remediation-cycle.md  ADR-0014-runtime-agent-company.md  ADR-0015-autonomous-redteam.md  ADR-0016-runtime-redteam-department.md  ADR-0017-agentic-command-center-ui.md  ADR-0018-runtime-builder-department.md  ADR-0018-web-dashboard.md  ADR-0019-web-dashboard.md  ADR-0020-serve-wires-the-runtime-org.md  ADR-0021-state-persistence.md  ADR-0022-siege-crisis-response.md  ADR-0023-detection-depth.md  ADR-0024-fleet-foundation.md  ADR-0025-http-mcp-bridge.md  ADR-0026-self-security-hardening.md  ADR-0027-agents-quality.md  ADR-0028-capability-inspector.md  ADR-0029-llm-runtime-agents.md
evals/: baseline.json  run_evals.py
evals/corpus/: ben-0001-clean-response.yaml  ben-0002-security-docs.yaml  ben-0003-allowed-call.yaml  ben-0004-care-instructions.yaml  ben-0005-password-reset.yaml  ben-0006-system-admin.yaml  ben-0007-follow-previous-instructions.yaml  ben-0008-quoted-attack-phrase.yaml  ben-0009-legit-order-lookup.yaml  ben-0010-base64-benign-text.yaml  ben-0011-hex-benign-text.yaml  ben-0012-technical-documentation.yaml  ben-0013-base64-in-product-code.yaml  ben-0014-quoted-policy-reference.yaml  ben-0015-system-status-update.yaml  ben-0016-csv-data-response.yaml  (+100 more)
policies/: capability.yaml  contextual.yaml  default.yaml  multi.yaml
tests/: conftest.py  test_agents_quality.py  test_approvals.py  test_breaker.py  test_bridge.py  test_builder_dept.py  test_claims.py  test_client.py  test_config.py  test_context_authz_e2e.py  test_context_policy.py  test_decode.py  test_detection_depth.py  test_e2e_stdio.py  test_evals.py  test_fleet.py  test_http.py  test_identity.py  test_integration.py  test_integrity.py  test_llm_builder.py  test_llm_redteam.py  test_llm_sentinel.py  test_mode.py  test_patterns.py  test_persistence.py  test_pipeline.py  test_policy.py  test_proxy.py  test_ratelimit.py  test_redteam.py  test_redteam_dept.py  test_remediation.py  test_resources.py  test_runner.py  test_runtime_org.py  test_self_protect.py  test_sentinels.py  test_serve_live.py  test_siege_response.py  (+5 more)
(+72 files in other folders)
