[project]
name = "olive"
version = "0.1.0"
description = "Olive - zero-trust runtime security gateway for AI agents (transparent MCP proxy)"
readme = "README.md"
requires-python = ">=3.11"
# license intentionally unset - business posture deferred, see ADR-0003
dependencies = [
    "mcp>=1.2.0",          # official MCP SDK - the protocol we proxy (ADR-0001)
    "aiosqlite>=0.20",     # async audit store (ADR-0004)
    "pyyaml>=6.0",         # policy-as-code files
    "pyjwt[crypto]>=2.8",  # mock-CA RS256 agent identity tokens
    "rich>=13.7",          # demo/eval terminal output
    "starlette>=0.40",     # HTTP transport app + bearer auth middleware (ADR-0007)
    "uvicorn>=0.30",       # ASGI server for `olive serve`
]

[project.optional-dependencies]
# The intelligence layer's Claude semantic sentinel (M6, ADR-0012). Optional so
# the gateway core stays free of the LLM SDK (open-core seam, ADR-0003); the
# analyzer degrades to "no signal" when absent.
intelligence = [
    "anthropic>=0.69",  # Claude API for the Prompt-Injection Sentinel
]
# The Agentic Command Center TUI (ADR-0017). Optional so the gateway core stays
# free of the TUI stack (open-core seam, ADR-0003); `olive ui` is absent without it.
ui = [
    "textual>=0.60",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "anthropic>=0.69",  # exercises the intelligence layer's SDK path in tests
    "textual>=0.60",    # exercises the Agentic Command Center in tests
]

[project.scripts]
olive = "olive.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
